@@ -10,12 +10,6 @@
 			<label index="choose_task">Task:</label>
 			<label index="mlang_tabs_tab">Tasks</label>
 			<label index="task_overview">Overview</label>
-
-
-
-
-
-
 			<label index="lReplyAddress">Reply address is your email</label>
 			<label index="lSelf">Self</label>
 			<label index="lSendNew">Send message</label>
@@ -28,15 +22,8 @@
 			<label index="lDelete_warning">Are you sure you want to delete this user?</label>
 			<label index="lDelete">Delete</label>
 			<label index="lUpdate">Update</label>
-			
-			
-			
-			
 			<label index="task_help_title">About the taskcenter</label>
 			<label index="task_help_description">Get more information about the taskcenter</label>
-			
-			
-			
 		</languageKey>
 	</data>
 </T3locallang>
